--- a/registertutor.html
+++ b/registertutor.html
@@ -9,10 +9,10 @@
 
 <body>
     <div class="bar">
-        <button class="back-btn">← BACK</button>
+        <button class="back-btn" onclick="window.location.href='mainpage.php'">← BACK</button>
         <div class="right-group">
             <span class="text">Already have an account?</span>
-            <button class="login-btn">LOG IN</button>
+            <button class="login-btn" onclick="window.location.href='login.html'">LOG IN</button>
         </div>
     </div>
 
