Tutor Login And Sign Up

--- a/login.html
+++ b/login.html
@@ -45,6 +45,20 @@
       width: max-content;
       margin: 30px auto 10px auto;
     }
+
+    footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #7e3d3c;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 0.9rem;
+    font-weight: bold;
+    }
+    .footer{
+    color: black;
+    }
   </style>
 </head>
 <body>
