--- a/registertutor.html
+++ b/registertutor.html
@@ -12,7 +12,7 @@
         <button class="back-btn" onclick="window.location.href='mainpage.php'">← BACK</button>
         <div class="right-group">
             <span class="text">Already have an account?</span>
-            <button class="login-btn" onclick="window.location.href='login.html'">LOG IN</button>
+            <button class="login-btn" onclick="window.location.href='tutorlogin.html'">LOG IN</button>
         </div>
     </div>
 
