--- a/registerstudent.html
+++ b/registerstudent.html
@@ -36,7 +36,7 @@
 
         <div>
             <label for="student_age">Age</label>
-            <input type="number" id="student_age" name="student_age" min="5" max="30" placeholder="Your Age" required>
+            <input type="number" id="student_age" name="student_age" placeholder="Your Age" required>
         </div>
 
         <div>
