--- a/registertutor.html
+++ b/registertutor.html
@@ -36,7 +36,7 @@
 
         <div>
             <label for="tutor_age">Age</label>
-            <input type="number" id="tutor_age" name="tutor_age" min="13" max="30" placeholder="Your Age" required>
+            <input type="number" id="tutor_age" name="tutor_age" placeholder="Your Age" required>
         </div>
 
         <div>
