--- a/registerstudent.html
+++ b/registerstudent.html
@@ -83,6 +83,10 @@
             <span>Proceed to register as a Student?</span><br><br>
             <input type="submit" id="submit" value="PROCEED">
         </div>
+
+        <div class="form-footer">
+  <button id="submit" type="submit">Submit</button>
+</div>
     </form>
 </body>
 
