fix php and html part student

--- a/studentlogin.html
+++ b/studentlogin.html
@@ -22,13 +22,13 @@
       <article class="form">
         <form action="loginstudent.php" method="post">
           <div class="full-width">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="student_username" required>
+            <label for="student_username">Username</label>
+            <input type="text" id="student_username" name="student_username" required>
           </div>
 
           <div class="full-width">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="student_password" required>
+            <label for="student_password">Password</label>
+            <input type="password" id="student_password" name="student_password" required>
           </div>
 
           <div class="full-width status">
@@ -45,7 +45,7 @@
   </div>
 
   <footer>
-    <p class="footer">2025 LumiLearnHub. All rights reserved.</p>
+    <p class="footer">© 2025 LumiLearnHub. All rights reserved.</p>
   </footer>
 
   <script>
